@@ -202,6 +202,8 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 15835) Added Content-Style-Type meta tag
 * Add class="disambiguationpage" to <body> tag for disambiguations
 * (bug 11027)  Add parameter to MW:Randompage-nopages so that user can see the namespace.
+* New global function wfInvokeFancyCallback() can be used to dynamically
+  invoke functions with a flexible interface, like wfRunHooks does.
 
 === Bug fixes in 1.14 ===
 
